TestSuite/Verification/Error/Serial/Syntax/Expression/out/includes/VariableGenerationTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef VariableGenerationTest_HXX
#define VariableGenerationTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif